experiments/multi-root-grammar/variant/test/corpus/errors/complex.txt
================================================================================
Complex - generated from corpus
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|2;6|male|||Target_Child|||
@Comment:	Note: Replacements can contain groups, which align recursively
*CHI:	I <want the big> [: need a large] cookie .
%mor:	pro|I v|need n|cookie .
@Comment:	ERROR: Replacement "need a large" has 3 words (need, a, large)
@Comment:	Main tier alignable: I, need, a, large, cookie = 5 words
@Comment:	Mor tier: Should be pro|I v|need det|a adj|large n|cookie (5 items + terminator)
@End

--------------------------------------------------------------------------------

(ERROR (utf8_header (newline)) (begin_header (newline)) (line (languages_header (languages_prefix) (header_sep (colon) (tab)) (languages_contents (language_code)) (newline))) (line (participants_header (participants_prefix) (header_sep (colon) (tab)) (participants_contents (participant code: (speaker) (whitespaces) (participant_word))) (newline))) (line (id_header (id_prefix) (header_sep (colon) (tab)) (id_contents (id_languages (languages_contents (language_code))) (pipe) (id_corpus) (pipe) (id_speaker) (pipe) (id_age (age_format)) (pipe) (id_sex (male_value)) (pipe) (pipe) (pipe) (id_role) (pipe) (pipe) (pipe)) (newline))) (line (comment_header (comment_prefix) (header_sep (colon) (tab)) (text_with_bullets_and_pics (text_segment)) (newline))) (star) (speaker) (colon) (tab) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (less_than) (ERROR (contents (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word))))) (greater_than) (whitespaces) (left_bracket)) (contents (separator (colon)) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (ERROR (right_bracket) (space) (space) (period) (newline) (mor_tier_prefix)) (separator (colon)) (ERROR (tab) (pipe) (space) (pipe) (space) (pipe) (space) (period) (newline) (comment_prefix)) (separator (colon)) (ERROR (tab)) (separator (colon)) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (ERROR (newline) (comment_prefix)) (separator (colon)) (ERROR (tab) (space) (space)) (separator (colon)) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (separator (non_colon_separator (comma))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (ERROR (newline) (comment_prefix)) (separator (colon)) (ERROR (tab) (space)) (separator (colon)) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word)))) (whitespaces) (content_item (base_content_item (word_with_optional_annotations word: (standalone_word))))) (newline) (newline))
