experiments/multi-root-grammar/variant/test/corpus/errors/e320.txt
================================================================================
E320 - E320: UnparsableHeader
================================================================================
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|test|CHI||female|||Target_Child|||
@Transcription:	[malformed content with [unbalanced brackets
*CHI:	hello .
@End

--------------------------------------------------------------------------------
